<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cekmece_arkaplan"
    android:background="@color/black"
    tools:context=".ProgramlayiciActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include

            layout="@layout/programlayici_toolbar"/>

        <TextView
            android:id="@+id/txtsayigiris"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/b0"
            android:gravity="right"
            android:padding="30dp"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:textStyle="bold"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHex"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Hex" />
        <TextView
            android:id="@+id/txtHexCvp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDec"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Dec" />
        <TextView
            android:id="@+id/txtDecCvp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
                android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtOct"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Oct" />
        <TextView
            android:id="@+id/txtOctCvp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtBin"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Bin" />
        <TextView
            android:id="@+id/txtBinCvp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/programtus" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_gravity="start">

        <include layout="@layout/menu_yonlendirme_cekmecesi" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>