<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sutarihten"
            android:textColor="@color/orange"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtgiris"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:inputType="none"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imgtarih1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="tarih"
                app:srcCompat="@drawable/ic_calendar"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sutarihe"
            android:textColor="@color/orange"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtgiris2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:inputType="none"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/imgtarih2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="tarih"
                app:srcCompat="@drawable/ic_calendar"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtfark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/fark"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtfarksayi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"></RelativeLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>